objects/PurchaseOrder__c/PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Purchase Order NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>