objects/PurchaseOrder__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <length>200</length>
    <type>Text</type>
</CustomField>