objects/PurchaseOrder__c/fields/Carriage__c.field-meta.xml
<CustomField>
    <fullName>Carriage__c</fullName>
    <label>Carriage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>