objects/PurchaseOrder__c/fields/Close_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Close_Purchase_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Purchase Order</label>
    <type>Checkbox</type>
</CustomField>