objects/PurchaseOrder__c/fields/Collected__c.field-meta.xml
<CustomField>
    <fullName>Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collected</label>
    <type>Checkbox</type>
</CustomField>