objects/PurchaseOrder__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>