objects/PurchaseOrder__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tim Boyt</fullName>
            </value>
            <value>
                <fullName>Merfantz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>