objects/PurchaseOrder__c/fields/Customs__c.field-meta.xml
<CustomField>
    <fullName>Customs__c</fullName>
    <label>Customs</label>
    <type>Date</type>
</CustomField>