objects/PurchaseOrder__c/fields/Date_required__c.field-meta.xml
<CustomField>
    <fullName>Date_required__c</fullName>
    <label>Date required</label>
    <type>Date</type>
</CustomField>