objects/PurchaseOrder__c/fields/Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Address__c</fullName>
    <formula>&quot;Eclipse Dental Engineering Ltd&quot; &amp; BR() &amp; 
&quot;Westview Court&quot; &amp; BR() &amp; 
&quot;10-14 Kent Road&quot; &amp; BR() &amp; 
&quot;Dartford&quot; &amp; BR() &amp; 
&quot;Kent&quot; &amp; BR() &amp; 
&quot;DA1 2AJ&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Address</label>
    <type>Text</type>
</CustomField>