objects/PurchaseOrder__c/fields/Delivey__c.field-meta.xml
<CustomField>
    <fullName>Delivey__c</fullName>
    <formula>IF(Contact_Name__c &lt;&gt; &apos;&apos;, Contact_Name__c &amp; BR() , &apos;&apos;) &amp; 
IF( Contact_Number__c &lt;&gt; &apos;&apos;, Contact_Number__c &amp; BR() , &apos;&apos;) &amp; 
IF( Shipping_Name__c &lt;&gt; &apos;&apos;, Shipping_Name__c&amp; BR(), &apos;&apos;) &amp; 
IF( Address__c &lt;&gt; &apos;&apos;, Address__c&amp; BR(), &apos;&apos;)&amp; 
IF( City__c &lt;&gt; &apos;&apos;, City__c&amp; BR(), &apos;&apos;) &amp; 
IF( State__c &lt;&gt; &apos;&apos; , State__c&amp; BR(), &apos;&apos;) &amp; 
IF( Pincode__c &lt;&gt; &apos;&apos;, Pincode__c&amp; BR(), &apos;&apos;) &amp; 
IF( Country__c &lt;&gt; &apos;&apos;, Country__c&amp; BR(), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery</label>
    <type>Text</type>
</CustomField>