objects/PurchaseOrder__c/fields/Document_Creator__c.field-meta.xml
<CustomField>
    <fullName>Document_Creator__c</fullName>
    <label>Document Creator</label>
    <required>true</required>
    <type>Email</type>
</CustomField>