objects/PurchaseOrder__c/fields/Field12__c.field-meta.xml
<CustomField>
    <fullName>Field12__c</fullName>
    <formula>if(NOT( ISPICKVAL( Supplier__r.NewStatus__c , &apos;QC-APPROVED&apos;)),IMAGE(&quot;/resource/Resource&quot;,&quot;Warning, this supplier is not QC-Approved&quot;,30,35)+ &apos;Warning, this supplier is not QC-Approved&apos;,&apos; &apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>