objects/PurchaseOrder__c/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <formula>IF(OR ( Supplier__r.BillingStreet &lt;&gt; &quot;&quot;, Supplier__r.BillingCity&lt;&gt; &quot;&quot;, Supplier__r.BillingState&lt;&gt; &quot;&quot;, Supplier__r.BillingPostalCode&lt;&gt; &quot;&quot;, Supplier__r.BillingCountry&lt;&gt; &quot;&quot;), 
IF(Supplier__r.BillingStreet &lt;&gt; &apos;&apos;, Supplier__r.BillingStreet&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.BillingCity &lt;&gt; &apos;&apos;, Supplier__r.BillingCity&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.BillingState &lt;&gt; &apos;&apos;,Supplier__r.BillingState&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.BillingPostalCode &lt;&gt; &apos;&apos;, Supplier__r.BillingPostalCode&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.BillingCountry &lt;&gt; &apos;&apos;,Supplier__r.BillingCountry, &apos;&apos;), 

IF ( OR ( Supplier__r.ShippingStreet &lt;&gt; &quot;&quot;, Supplier__r.ShippingCity&lt;&gt; &quot;&quot;, Supplier__r.ShippingState&lt;&gt; &quot;&quot;, Supplier__r.ShippingPostalCode&lt;&gt; &quot;&quot;, Supplier__r.ShippingCountry&lt;&gt; &quot;&quot; ), 
IF(Supplier__r.ShippingStreet &lt;&gt; &apos;&apos;, Supplier__r.ShippingStreet&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.ShippingCity &lt;&gt; &apos;&apos;, Supplier__r.ShippingCity&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.ShippingState &lt;&gt; &apos;&apos;,Supplier__r.ShippingState&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.ShippingPostalCode&lt;&gt; &apos;&apos;, Supplier__r.ShippingPostalCode&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.ShippingCountry &lt;&gt; &apos;&apos;,Supplier__r.ShippingCountry, &apos;&apos;), 

IF ( OR ( Supplier__r.Parent.BillingStreet &lt;&gt; &quot;&quot;, Supplier__r.Parent.BillingCity&lt;&gt; &quot;&quot;, Supplier__r.Parent.BillingState&lt;&gt; &quot;&quot;, Supplier__r.Parent.BillingPostalCode&lt;&gt; &quot;&quot;, Supplier__r.Parent.BillingCountry&lt;&gt; &quot;&quot; ), 

IF(Supplier__r.Parent.BillingStreet &lt;&gt; &apos;&apos;, Supplier__r.Parent.BillingStreet&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.BillingCity &lt;&gt; &apos;&apos;, Supplier__r.Parent.BillingCity&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.BillingState &lt;&gt; &apos;&apos;,Supplier__r.Parent.BillingState&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.BillingPostalCode&lt;&gt; &apos;&apos;, Supplier__r.Parent.BillingPostalCode&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.BillingCountry &lt;&gt; &apos;&apos;,Supplier__r.Parent.BillingCountry, &apos;&apos;), 

IF ( OR ( Supplier__r.Parent.ShippingStreet &lt;&gt; &quot;&quot;, Supplier__r.Parent.ShippingCity&lt;&gt; &quot;&quot;, Supplier__r.Parent.ShippingState&lt;&gt; &quot;&quot;, Supplier__r.Parent.ShippingPostalCode&lt;&gt; &quot;&quot;, Supplier__r.Parent.ShippingCountry&lt;&gt; &quot;&quot; ), 


IF(Supplier__r.Parent.ShippingStreet &lt;&gt; &apos;&apos;, Supplier__r.Parent.ShippingStreet&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.ShippingCity &lt;&gt; &apos;&apos;, Supplier__r.Parent.ShippingCity&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.ShippingState &lt;&gt; &apos;&apos;,Supplier__r.Parent.ShippingState&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.ShippingPostalCode&lt;&gt; &apos;&apos;, Supplier__r.Parent.ShippingPostalCode&amp; BR(), &apos;&apos;) &amp; 
IF(Supplier__r.Parent.ShippingCountry &lt;&gt; &apos;&apos;,Supplier__r.Parent.ShippingCountry, &apos;&apos;),&apos;&apos;) 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>