objects/PurchaseOrder__c/fields/Notes_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Supplier__c</fullName>
    <label>Notes to Supplier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>