objects/PurchaseOrder__c/fields/Order_Total_For_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_For_Received_Qty__c</fullName>
    <formula>Sub_Total_For_Received_Qty__c  +  VAT_Total_For_Recived_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total For Received Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>