objects/PurchaseOrder__c/fields/Part_Required__c.field-meta.xml
<CustomField>
    <fullName>Part_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Recd</label>
    <type>Checkbox</type>
</CustomField>