objects/PurchaseOrder__c/fields/POAddress__c.field-meta.xml
<CustomField>
    <fullName>POAddress__c</fullName>
    <formula>IF( OR(Shipping_Warehouse__r.Address__c  &lt;&gt; &quot;&quot;,Shipping_Warehouse__r.City__c &lt;&gt; &quot;&quot;,  Shipping_Warehouse__r.State__c &lt;&gt; &quot;&quot; ,Shipping_Warehouse__r.Pincode__c &lt;&gt; &quot;&quot;), 
IF( Shipping_Warehouse__r.Address__c &lt;&gt; &quot;&quot;, Shipping_Warehouse__r.Address__c&amp;BR(),&quot;&quot;)&amp; 
IF( Shipping_Warehouse__r.City__c &lt;&gt; &quot;&quot; , Shipping_Warehouse__r.City__c &amp;BR(), &quot;&quot; )&amp; 
IF( Shipping_Warehouse__r.State__c &lt;&gt; &quot;&quot; , Shipping_Warehouse__r.State__c &amp;BR(), &quot;&quot; )&amp; 
IF( Shipping_Warehouse__r.Pincode__c &lt;&gt; &quot;&quot; , Shipping_Warehouse__r.Pincode__c &amp;&quot;&quot;, &quot;&quot; ),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POAddress</label>
    <type>Text</type>
</CustomField>