objects/PurchaseOrder__c/fields/Purchase_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Code__c</fullName>
    <label>Purchase Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5055 - Fire Extinguisher Installation</fullName>
            </value>
            <value>
                <fullName>5056 - Wet &amp; Dry Riser Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>