objects/PurchaseOrder__c/fields/Purchase_Ledger_Comments__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Ledger_Comments__c</fullName>
    <label>Purchase Ledger Comments</label>
    <type>TextArea</type>
</CustomField>