objects/PurchaseOrder__c/fields/Purchase_Manager__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>