objects/PurchaseOrder__c/fields/Purchase_Reason__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Reason__c</fullName>
    <label>Purchase Reason</label>
    <type>TextArea</type>
</CustomField>