objects/PurchaseOrder__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <label>Req Delivery Date</label>
    <type>Date</type>
</CustomField>