objects/PurchaseOrder__c/fields/Send_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Send_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>