objects/PurchaseOrder__c/fields/Send_an_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_an_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send an Email</label>
    <type>Checkbox</type>
</CustomField>