objects/PurchaseOrder__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <label>Shipping Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>