objects/PurchaseOrder__c/fields/Shipping_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>