objects/PurchaseOrder__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <type>TextArea</type>
</CustomField>