objects/PurchaseOrder__c/fields/Sub_Total_For_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_For_Received_Qty__c</fullName>
    <formula>Total_Amount_for_Recived_Qty__c  +  Carriage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total For Received Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>