objects/PurchaseOrder__c/fields/Supplier_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Comments__c</fullName>
    <label>Supplier Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>