objects/PurchaseOrder__c/fields/Total_Amount_for_Recived_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_Recived_Qty__c</fullName>
    <label>Total Amount for Recived Qty</label>
    <summarizedField>PurchaseOrderLineItem__c.Received_Quantity_Price__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>