objects/PurchaseOrder__c/fields/VAT_Total__c.field-meta.xml
<CustomField>
    <fullName>VAT_Total__c</fullName>
    <formula>( Total_Amount__c  *  VAT_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>