objects/PurchaseOrder__c/fields/VAT_Total_For_Recived_Qty__c.field-meta.xml
<CustomField>
    <fullName>VAT_Total_For_Recived_Qty__c</fullName>
    <formula>Total_Amount_for_Recived_Qty__c  *  VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Total For Recived Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>