objects/PurchaseOrder__c/validationRules/Purchase_Order_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Order_Status</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISPICKVAL( Supplier__r.NewStatus__c , &apos;QC-APPROVED&apos;) )</errorConditionFormula>
    <errorDisplayField>Supplier__c</errorDisplayField>
    <errorMessage>Warning, this supplier is not QC-Approved</errorMessage>
</ValidationRule>